--- a/Css/style.css
+++ b/Css/style.css
@@ -56,6 +56,7 @@ body{
 {
     background-color: lightskyblue;
     width: 35%;
+    border-radius: 20px;
     float: left;    
     height: 403px;
 }
@@ -102,6 +103,10 @@ body{
     text-decoration:none;
 
 }
+.fill:hover{
+    background-color: olive;
+    color: gold;
+}
 .section1-left-contect .sty-2{
     margin-left: 20px;
     font-size: 30px;
@@ -119,11 +124,15 @@ body{
     margin-left: 15px;
 }
 .section1-right-img-icon{
-    background-color: hotpink;
+    /* background-color: hotpink; */
     width: 400px;
     height: 200px;
     display: inline-flex;
     justify-content: space-between;
+}
+.section1-right-img-icon img{
+    width: 400px;
+    height: 200px;
 }
 
 .prodectsolder{
@@ -251,6 +260,21 @@ body{
     /* background-color: gray; */
     height: 40px;
 }
+.section-2-container a:hover{
+    animation: swap 1s;
+}
+@keyframes swap {
+    0%{
+        transform: scale(1);
+    }
+    50%{
+        transform: scale(1.1);
+    }
+    100%{
+        transform: scale(1);
+    }
+    
+}
 
 
 
@@ -287,7 +311,7 @@ body{
 .section-3-left-box{
     width: 300px;
     height: 340px;
-    background-color:lightslategrey;
+    background-color:rgb(104, 168, 231);
     float: left;
     margin-left: 50px;
     margin-top:20px;
@@ -304,11 +328,13 @@ body{
 .section-3-left-box-text-container p , .section-3-left-box-arrow-container p{
     font-size: 25px;
     font-weight: bold;
+    color:crimson;
 }
-.section-3-left-box-arrow-container{
+.section-3-left-box-arrow-container span{
     position:absolute;
     right: 10px;
     bottom: 20px;
+    color:silver;
 }
 
 .section-3-right{
@@ -979,6 +1005,11 @@ body{
     position: absolute;
     top: 20px;
     left: 100px;
+}
+.footar-links a:hover{
+    color: blue;
+    font-size: 35px;
+
 }
 /* Sectio -11 end */
 
