--- a/Css/style.css
+++ b/Css/style.css
@@ -798,6 +798,7 @@ body{
     width: 100%;
     height: 800px;
     /* background-color: red; */
+    position: relative;
 }
 .section-9-heading{
     width: 100%;
@@ -874,6 +875,24 @@ body{
     font-size: 25px;
     color: blue;
 }
+.section-9-heading-arrows-1{
+    float: right ;
+    font-size: 45px;
+    position: absolute;
+    top: 10px;
+    right: 70px;
+    background-color: gainsboro;
+    border-radius: 50%;
+}
+.section-9-heading-arrows-2{
+    float: right ;
+    font-size: 45px;
+    position: absolute;
+    top: 10px;
+    right: 150px;
+    background-color: gainsboro;
+    border-radius: 50%;
+}
 
 /* section-10 */
 .section-10
@@ -881,10 +900,11 @@ body{
     width: 100%;
     height: 670px;
     /* background-color: red; */
+    position: relative;
 }
 .section-10-heading
 {
-    width: 100%;
+    width: 95%;
     height: auto;
     margin-left: 60px;
     /* background-color: green ; */
